# noir

./: Cargo.toml
tooling/noir_rs/: Cargo.toml
tooling/noir_rs/acir_composer/: Cargo.toml
tooling/noir_rs/acir_composer/src/: lib.rs  tests.rs
tooling/noir_rs/acvm_runtime/: Cargo.toml
tooling/noir_rs/acvm_runtime/src/: errors.rs  execute.rs  tests.rs
tooling/noir_rs/barretenberg/: Cargo.toml  build.rs
tooling/noir_rs/barretenberg/src/circuit/: mod.rs  tests.rs
tooling/noir_rs/barretenberg/src/pedersen/: mod.rs
tooling/noir_rs/blackbox_solver/: Cargo.toml
tooling/noir_rs/blackbox_solver/src/: lib.rs  pedersen.rs  scalar_mul.rs
tooling/noir_rs/src/: lib.rs
